--- a/Dockerfile-defaultworker
+++ b/Dockerfile-defaultworker
@@ -7,6 +7,10 @@ RUN pip install git+https://github.com/theromis/django-inplaceedit.git@e6fa12355
 USER root
 WORKDIR /hydroshare
 
+RUN userdel hydro-service \
+ && groupdel storage-hydro \
+ && echo "storage-hydro:x:HS_SERVICE_GID:" >> /etc/group \
+ && echo "hydro-service:x:HS_SERVICE_UID:HS_SERVICE_GID::/hydroshare:/bin/bash" >> /etc/passwd
 
 RUN celery beat -A hydroshare -s /log/celerybeat-schedule &
 CMD celery worker -A hydroshare -E -Q default
