--- a/Dockerfile-hydroshare
+++ b/Dockerfile-hydroshare
@@ -8,12 +8,11 @@ USER root
 WORKDIR /hydroshare
 
 
-RUN usermod -u 1000 hydro-service
-RUN groupmod -g 1000 storage-hydro
-RUN mkdir /hs_tmp
-RUN mkdir /shared_tmp
-RUN chown -R hydro-service:storage-hydro /hydroshare
-RUN chown -R hydro-service:storage-hydro /hs_tmp
-RUN chown -R hydro-service:storage-hydro /shared_tmp
+RUN userdel hydro-service \
+ && groupdel storage-hydro \
+ && echo "storage-hydro:x:214400513:" >> /etc/group \
+ && echo "hydro-service:x:214401701:214400513::/hydroshare:/bin/bash" >> /etc/passwd \
+ && mkdir /hs_tmp /shared_tmp \
+ && chown -R hydro-service:storage-hydro /hydroshare /hs_tmp /shared_tmp
 
 CMD ["runuser", "-p", "-u", "hydro-service", "-g", "storage-hydro", "python", "manage.py", "runserver", "0.0.0.0:8000"]
