--- a/Dockerfile-hydroshare.template
+++ b/Dockerfile-hydroshare.template
@@ -1,10 +1,9 @@
 
-RUN usermod -u {HS_SERVICE_UID} hydro-service
-RUN groupmod -g {HS_SERVICE_GID} storage-hydro
-RUN mkdir /hs_tmp
-RUN mkdir /shared_tmp
-RUN chown -R hydro-service:storage-hydro /hydroshare
-RUN chown -R hydro-service:storage-hydro /hs_tmp
-RUN chown -R hydro-service:storage-hydro /shared_tmp
+RUN userdel hydro-service \
+ && groupdel storage-hydro \
+ && echo "storage-hydro:x:HS_SERVICE_GID:" >> /etc/group \
+ && echo "hydro-service:x:HS_SERVICE_UID:HS_SERVICE_GID::/hydroshare:/bin/bash" >> /etc/passwd \
+ && mkdir /hs_tmp /shared_tmp \
+ && chown -R hydro-service:storage-hydro /hydroshare /hs_tmp /shared_tmp
 
 CMD ["runuser", "-p", "-u", "hydro-service", "-g", "storage-hydro", "python", "manage.py", "runserver", "0.0.0.0:8000"]
