--- a/scripts/templates/init-defaultworker.template
+++ b/scripts/templates/init-defaultworker.template
@@ -4,6 +4,11 @@ cd /hydroshare
 userdel hydro-service \
  && groupdel storage-hydro \
  && echo "storage-hydro:x:HS_SERVICE_GID:" >> /etc/group \
- && echo "hydro-service:x:HS_SERVICE_UID:HS_SERVICE_GID::/hydroshare:/bin/bash" >> /etc/passwd
+ && echo "hydro-service:x:HS_SERVICE_UID:HS_SERVICE_GID::/hydroshare:/bin/bash" >> /etc/passwd \
+ && chown -R hydro-service:storage-hydro /hydroshare /hs_tmp /shared_tmp /tmp \
+ && chmod -R 3777 /hs_tmp /shared_tmp /tmp \
+ && setfacl -Rm d:g:storage-hydro:rwx /hs_tmp /shared_tmp /tmp \
+ && setfacl -Rm g:storage-hydro:rwx /hs_tmp /shared_tmp /tmp
+
 celery beat -A hydroshare -s /hydroshare/celery/celerybeat-schedule &
 celery worker -A hydroshare -E -Q default
